--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,19 @@
 body {
-  margin: 0;
-  padding: 0;
+  min-height: 100%;
   font-family: 'Open Sans';
-  text-align: center
+  text-align: center;
 }
 
-footer#footer p{
-  padding-top: 0px;
-  padding-bottom: 30px;
+footer {
+  height: 100px;
+  background-color: #efefef;
+  text-align: center;
+  margin-top: 50px;
+}
+
+footer p {
+  padding: 20px 0 0 0;
+  margin: 0;
 }
 
 div.readmore {
@@ -335,7 +341,7 @@ p {
 }
 
 .myButton:hover {
-  background-color: #fff;
+  background-color: #c3e0ff;
 }
 
 .myButton:active {
@@ -405,46 +411,8 @@ img#wayfarer {
   position: relative
 }
 
-
-div.one-comment {
-  margin-top: 180px;
-  font-size: 30px;
-  color: black;
-  font-weight: bolder;
-}
-
-div#comment-title {
-  color: #0275d8;
-  letter-spacing: 5px;
-  font-size: 50px;
-}
-
-div.comment-text {
-  font-size: 25px;
-  margin-top: 20px;
-}
 div.profile-contents {
   margin-top: 80px;
-}
-
-div.comment-name {
-  /*text-align: left;*/
-  font-size: 20px;
-  padding-top: 15px;
-}
-
-div.comment-box {
-  box-shadow: 1px 2px 2px 2px #888888;
-  /*background-color: #e8e8e8;
-  border: 1px solid;
-  border-radius: 20px;*/
-}
-div.comment-time {
-  /*margin-top: 20px;*/
-  text-align: right;
-  font-size: 15px;
-  padding-top: 15px;
-  padding-right: 15px;
 }
 
 img#share {
@@ -576,7 +544,10 @@ div.explore a:hover {
 }
 
 #postBox {
-
+  background-color: #fff;
+  /*position: absolute;*/
+  top: 500px;
+  width: 100%
 }
 
 /*Post Indiv*/
@@ -624,7 +595,7 @@ div.explore a:hover {
   margin-top: 20px;
 }
 
-#postIndiv form textarea {
+form textarea, .form-control {
   padding: 10px;
 }
 
