requires users to log in before creating a post

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -282,6 +282,10 @@ p#cities-adventure {
   padding: 0;
 }
 
+#postIndiv .userpost {
+  padding-left: 15px;
+}
+
 #postIndiv .right {
   text-align: right;
 }
