--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -9,7 +9,7 @@ footer {
   color: #fff;
   padding: 15px 20px 10px 20px;
   text-align: left;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -31,14 +31,18 @@ a, a:hover, a:visited, a:focus {
 
 /*Applies to all Pages*/
 .page {
-  padding: 40px 0;
+  margin: 50px 0;
 }
 
 /*Navbar*/
 nav {
+  width: 100%;
+  top: 0;
+  left: 0;
   font-size: 15px;
   box-shadow: none;
   margin: 0;
+  position: absolute;
 }
 
 nav #wayfarer {
@@ -85,7 +89,7 @@ nav .name {
 }
 
 .dropdown-content a:hover {
-  background-color: rgba(239, 117, 75, 0.28);
+  background-color: rgba(255, 221, 204, 0.5);
 }
 
 .dropdown:hover .dropdown-content {
@@ -135,6 +139,11 @@ form.form {
 }
 
 /*Profile Page */
+#profile {
+  background-color: #fdc;
+  min-height: 670px;
+}
+
 div.profile-contents {
   margin: 80px 0;
 }
@@ -147,10 +156,15 @@ p.profile-name {
 
 img.profile-image {
   border-radius: 50%;
+  border: 4px solid #fff;
 }
 
 /*Cities Page*/
-.cityImage, #citiesPage {
+#citiesPage {
+  background-color: #fdc
+}
+
+.cityImage {
   padding: 40px 0;
   position: relative;
   overflow: hidden;
@@ -169,7 +183,7 @@ img.profile-image {
 }
 
 #citiesPage .cityImage:hover h1 {
-  color: #7faad8;
+  color: #ffc8ad;
   transform: scale(1.1)
 }
 
@@ -196,7 +210,7 @@ img.profile-image {
 }
 
 #postBox {
-  background-color: #fff;
+  background-color: #fdc;
   top: 500px;
   width: 100%
 }
