--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -22,6 +22,7 @@ footer a {
 
 form textarea, .form-control {
   padding: 10px;
+  background-color: #fff;
 }
 
 a, a:hover, a:visited, a:focus {
@@ -119,18 +120,18 @@ form.form {
   margin-right: 5px;
   border-width: 2px;
 	cursor: pointer;
-	font-size: 12px;
+	font-size: 15px;
 	padding: 7px 10px;
   font-weight: 700;
   text-align: center;
 	text-decoration:none;
-  background-color:#9eb8d3;
+  background-color: #ef754e;
   color: #000;
   border-style: none;
 }
 
 .myButton:hover {
-  background-color: #c3e0ff;
+  background-color: #f4a68d;
 }
 
 .myButton:active {
@@ -212,7 +213,8 @@ img.profile-image {
 #postBox {
   background-color: #fdc;
   top: 500px;
-  width: 100%
+  width: 100%;
+  padding-bottom: 50px;
 }
 
 /*Post Indiv*/
@@ -221,7 +223,7 @@ img.profile-image {
   text-align: left;
   padding: 25px;
   margin: 30px 0;
-  background-color: #f4f4f4;
+  background-color: #fcfcfc;
   -webkit-box-shadow: 0 10px 6px -6px #777;
      -moz-box-shadow: 0 10px 6px -6px #777;
           box-shadow: 0 6px 6px -6px #777;
