changes ajax urls to heroku deployed api

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -161,7 +161,7 @@ p.profile-name {
 
 img.profile-image {
   border-radius: 50%;
-  border: 4px solid #fff;
+  border: 4px solid #ef754e;
 }
 
 /*Cities Page*/
